fix: Ladder 최소 높이 검사 수정